fix: small tweaks to StatusVisualizer spacing
this PR also adds a metadata.name to the StatusModel (not currently visualized)

--- a/plugins/plugin-client-common/web/css/static/ui.css
+++ b/plugins/plugin-client-common/web/css/static/ui.css
@@ -476,6 +476,8 @@ body[kui-theme-style] {
   }
   .all-pad {
     padding: 1em;
+    padding-left: var(--input-padding-left);
+    padding-right: var(--input-padding-left);
   }
   .tiny-top-pad {
     margin-top: 0.125em;
